<resources>
    <string name="app_name">PengaduanMasyarakat</string>
    <string name="content">With the idea of imparting programming
      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
      dream, GeeksforGeeks. Whether programming excites you or you feel
      stifled, wondering how to prepare for interview questions or how to
      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
      With every tick of time, we are adding arrows in our quiver. From articles
      on various computer science subjects to programming problems for practice,
      from basic to premium courses, from technologies to entrance examinations,
      we have been building ample content with superior quality. In a short span,
      we have built a community of 1 Million+ Geeks around the world, 20,000+
      Contributors and 500+ Campus Ambassadors in various colleges across the nation.
      Our success stories include a lot of students who benefitted in their placements
      and landed jobs at tech giants. Our vision is to build a gigantic network of
      geeks and we are only a fraction of it yet.
  </string>
    <string name="sampaikan">Sampaikan Laporan Anda Langsung Kepada Instansi Pemerintah Kabupaten Hulu Sungai Tengah</string>
    <string name="lapor">PROSES</string>
    <string name="judul_pengaduan">Judul Pengaduan</string>
    <string name="isi_pengaduan">Isi Pengaduan</string>
    <string name="masukan_tanggal">Masukan tanggal</string>
    <string name="lokasi">Lokasi</string>
    <string name="gambar">Gambar</string>
    <string name="tombol_gambar">Tombol Gambar</string>
    <string name="selamat_datang_n_di_aplikasi_e_lapor">SELAMAT DATANG \n DI APLIKASI E-LAPOR</string>
    <string name="mulai_aplikasi">Mulai Aplikasi</string>
    <string name="dinas">Dinas Pekerjaan Umum dan Penataan Ruang\nKabupaten Hulu Sungai Tengah</string>
    <string name="nama_pelapor">Nama Pelapor</string>
    <string name="hp_pelapor">HP PELAPOR</string>
    <string name="penjelasan_token">Silakan masukkan token untuk melihat\nproses tindak lanjut laporan Anda.</string>
    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>