<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.Button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_teal"
    tools:context=".SplashActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="82dp"
            android:layout_height="86dp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dinas"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/imageView"
            android:layout_alignTop="@id/imageView"
            />
    </RelativeLayout>




    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.065"
        app:srcCompat="@drawable/arc_new"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/light_teal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/selamat_datang_n_di_aplikasi_e_lapor"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sampaikan"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background"
        android:text="@string/mulai_aplikasi"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.125" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_edit_white"
        android:ems="10"
        android:hint="MASUKKAN TOKEN ANDA"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/medium_teal"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?android:attr/buttonBarButtonStyle">

        <Button
            android:layout_weight="1"
            android:gravity="center"
            android:text="PENGADUAN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_weight="1"
            android:gravity="center"
            android:text="STATISTIKA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_weight="1"
            android:gravity="center"
            android:text="TENTANG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>